wenxu add 'z-index'value for sidebar to avoid home_page map cover the Sidebar

--- a/src/actions/components/Sidebar/Sidebar.css
+++ b/src/actions/components/Sidebar/Sidebar.css
@@ -6,6 +6,7 @@
     width: 200px;
     background-color: #333;
     overflow-y: hidden;
+    z-index: 10000;
 }
 
 .sidebar ul {
